Fix modal on safari

--- a/orchestra-hero/css/hero.scss
+++ b/orchestra-hero/css/hero.scss
@@ -377,5 +377,5 @@ div#buttons {
 }
 
 .modal-content {
-  z-index: 1000;
+  z-index: 9999;
 }
